About design tweaked.

--- a/pages/about.html
+++ b/pages/about.html
@@ -62,24 +62,22 @@
     <br>
     <br>
     <br>
+    <br>
     <h1>Clients</h1>
     <br>
     <br>
-    <h2>
-      <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
+    <h2 style="line-height: 2;">
+      <!-- &#9673  --><a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
       <br>
+      <!-- &#9636  --><a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
       <br>
-      <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+      <!-- &#9680  --><a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
       <br>
+      <!-- &#9707  --><a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
       <br>
-      <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
-      <br>
-      <br>
-      <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
-      <br>
-      <br>
-      more_about_robots GmbH (Bernd Liepert)
+      <!-- &#9709  -->more_about_robots GmbH
     </h2>
+    <br>
     <br>
     <br>
     <br>
@@ -87,23 +85,18 @@
     <h1>Links</h1>
     <br>
     <br>
-    <h2>
-      <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
+    <h2 style="line-height: 2;">
+      &#8674 <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
       <br>
+      &#8605 <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
       <br>
-      <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
+      &#8620 <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
       <br>
+      &#8702 <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
       <br>
-      <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
+      &#8699 <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
       <br>
-      <br>
-      <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
-      <br>
-      <br>
-      <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
-      <br>
-      <br>
-      <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
+      &#8692 <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
     </h2>
     <!-- <div class="about-column-right">
         <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
