Scroll highlight effect added.

--- a/pages/art.html
+++ b/pages/art.html
@@ -27,7 +27,7 @@
   <main>
     <div class="grid">
       <a href="2024/2024_aurora.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Interactive Experience</div>
@@ -36,7 +36,7 @@
         </div>
       </a>
       <a href="2024/2024_hibiscus.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Game Design</div>
@@ -45,7 +45,7 @@
         </div>
       </a>
       <a href="2023/2023_piru.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
           <div class="text-box">
             <div class="project-subtitle">2023<br>3D Game Art</div>
@@ -54,7 +54,7 @@
         </div>
       </a>
       <a href="2023/2023_colour_and_perception.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
           <div class="text-box">
             <div class="project-subtitle">2023<br>Colour Study</div>
@@ -63,7 +63,7 @@
         </div>
       </a>
       <a href="2023/2023_sad.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2023<br>Psychedelic Animations</div>
@@ -72,7 +72,7 @@
         </div>
       </a>
       <a href="2022/2022_rdac.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2022<br>Arduino Project</div>
@@ -81,7 +81,7 @@
         </div>
       </a>
       <a href="2021/2021_watch_out.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2021<br>3D Art</div>
@@ -90,7 +90,7 @@
         </div>
       </a>
       <a href="2021/2021_sunrisepunk.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2021<br>3D Animation</div>
@@ -99,7 +99,7 @@
         </div>
       </a>
       <a href="2021/2021_blue_odyssey.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2021<br>3D Game Trailer</div>
@@ -108,7 +108,7 @@
         </div>
       </a>
       <a href="2020/2020_clandestine_cult.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2020<br>3D Game Art & Level Design</div>
@@ -117,7 +117,7 @@
         </div>
       </a>
       <a href="2018/2018_space_jellyfish.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
           <div class="text-box">
             <div class="project-subtitle">2018<br>3D Animation</div>
@@ -126,7 +126,7 @@
         </div>
       </a>
       <a href="2017/2017_m302.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
           <div class="text-box">
             <div class="project-subtitle">2017<br>Abstract Painting</div>
