--- a/pages/design.html
+++ b/pages/design.html
@@ -27,7 +27,7 @@
   <main>
     <div class="grid">
       <a href="2024/2024_contestationsai.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Volunteer Work</div>
@@ -36,7 +36,7 @@
         </div>
       </a>
       <a href="2024/2024_gn_website.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Website for Grönlund-Nisunen</div>
@@ -45,7 +45,7 @@
         </div>
       </a>
       <a href="2024/2024_adungu_and_engoma.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>3D Design for J.C Muyonjo</div>
@@ -54,7 +54,7 @@
         </div>
       </a>
       <a href="2024/2024_marko_vuokola_nordea.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Photo Editing for Marko Vuokola</div>
@@ -63,7 +63,7 @@
         </div>
       </a>
       <a href="2023/2023_gn_843m3h.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
           <div class="text-box">
             <div class="project-subtitle">2023<br>3D Design for Grönlund-Nisunen</div>
@@ -72,7 +72,7 @@
         </div>
       </a>
       <a href="2022/2022_forum_mentoring_brochure.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
           <div class="text-box">
             <div class="project-subtitle">2022<br>Brochure Design for Forum Mentoring eV</div>
@@ -81,7 +81,7 @@
         </div>
       </a>
       <a href="2019/2019_business_card.html">
-        <div class="project">
+        <div class="highlight-project">
           <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
             alt="/2019_more_about_robots_BusinessCard_Cover">
           <div class="text-box">
