--- a/pages/design.html
+++ b/pages/design.html
@@ -31,7 +31,7 @@
           <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
             <div class="project-subtitle">2024<br>Volunteer Work</div>
-            <div class="project-title">Contestations AI</div>
+            <div class="project-title">Contestations.AI</div>
           </div>
         </div>
       </a>
