Kulture font added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
   <style>
     @font-face {
+      font-family: "Kulture";
+      src: url("fonts/Kulturë\ Type.otf");
+    }
+
+    @font-face {
       font-family: "OverusedGrotesk";
       src: url("fonts/OverusedGrotesk-Roman.ttf");
       font-weight: normal;
@@ -209,10 +214,10 @@
     }
 
     .quote {
+      font-family: 'Kulture';
       font-size: 48px;
-      color: #fff;
-      /* font-weight: bold; */
-      text-transform: uppercase;
+      mix-blend-mode: difference;
+      /* color: #fff; */
       position: absolute;
       top: 50%;
       left: 50%;
@@ -393,7 +398,7 @@
     <!-- Hello, hallo, moi :)
     <br>
     <br> -->
-    My name is Tino Selić, I am a Helsinki-based digital artist and designer
+    My name is Tino Selic, I am a Helsinki-based digital artist and designer
   </div>
   <footer id="copyright"></footer>
   <script>
