Start background blurred and h1 font changed.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       user-select: none;
       pointer-events: none;
       filter: brightness(0.6);
+      filter: blur(3px);
     }
 
     .responsive-video {
@@ -217,7 +218,7 @@
       font-family: 'Kulture';
       font-size: 48px;
       mix-blend-mode: difference;
-      /* color: #fff; */
+      /* color: #000; */
       position: absolute;
       top: 50%;
       left: 50%;
