Gallery image filters tweaked.

--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
       transform: translate(-50%, -50%);
       user-select: none;
       pointer-events: none;
-      filter: brightness(0.6);
-      filter: blur(3px);
+      filter: brightness(0.6) blur(3px);
     }
 
     .responsive-video {
