--- a/index.html
+++ b/index.html
@@ -213,70 +213,17 @@
       height: 100%;
     }
 
-    .slide-box {
-      /* background-color: #000; */
-      position: absolute;
-      overflow: hidden;
-      display: inline-block;
-      white-space: nowrap;
-      width: 100vw;
-      top: 45dvh;
-      /* top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); */
-    }
-
     .quote {
       font-family: 'Kulture';
-      font-size: 48px;
+      font-size: 64px;
+      text-align: center;
       /* color: #fff; */
       mix-blend-mode: difference;
-      /* width: calc(100vw - 36px); */
-      
-      /* animation properties */
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-
-      -moz-animation: text-slide 10s linear infinite;
-      -webkit-animation: text-slide 10s linear infinite;
-      animation: text-slide 20s linear infinite;
-    }
-
-    /* for Firefox */
-    @-moz-keyframes text-slide {
-      from {
-        -moz-transform: translateX(100%);
-      }
-
-      to {
-        -moz-transform: translateX(-100%);
-      }
-    }
-
-    /* for Chrome */
-    @-webkit-keyframes text-slide {
-      from {
-        -webkit-transform: translateX(100%);
-      }
-
-      to {
-        -webkit-transform: translateX(-100%);
-      }
-    }
-
-    @keyframes text-slide {
-      from {
-        -moz-transform: translateX(100%);
-        -webkit-transform: translateX(100%);
-        transform: translateX(100%);
-      }
-
-      to {
-        -moz-transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-150%);
-      }
+      width: 90vw;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     footer {
@@ -331,9 +278,9 @@
         padding: 3px 12px;
       }
 
-      /* .quote {
+      .quote {
         width: calc(100vw - 96px);
-      } */
+      }
     }
 
     @media only screen and (min-width: 1280px) {
@@ -352,11 +299,8 @@
       }
 
       .quote {
-        /* width: calc(100vw - 600px); */
+        width: calc(100vw - 600px);
         font-size: 96px;
-        -moz-animation: text-slide 30s linear infinite;
-        -webkit-animation: text-slide 30s linear infinite;
-        animation: text-slide 30s linear infinite;
       }
     }
 
@@ -369,9 +313,9 @@
         padding-right: 400px;
       }
 
-      /* .quote {
+      .quote {
         width: calc(100vw - 800px);
-      } */
+      }
     }
 
     @media only screen and (min-width: 2560px) {
@@ -403,9 +347,9 @@
         padding-left: 72px;
       }
 
-      /* .quote {
+      .quote {
         width: calc(100vw - 1200px);
-      } */
+      }
     }
 
     @media only screen and (min-width: 3840px) {
@@ -417,9 +361,9 @@
         padding-right: 800px;
       }
 
-      /* .quote {
+      .quote {
         width: calc(100vw - 1600px);
-      } */
+      }
     }
   </style>
   <title>Tino Selić</title>
@@ -451,13 +395,11 @@
     <video src="videos/20230817_PortfolioBackgroundVideo.mp4" playsinline autoplay muted loop>
     </video>
   </div>
-  <div class="slide-box">
-    <div class="quote">
-      <!-- Hello, hallo, moi :)
+  <div class="quote">
+    <!-- Hello, hallo, moi :)
       <br>
       <br> -->
-      My name is Tino Selic, I am a Helsinki-based digital artist and designer.
-    </div>
+    My name is Tino Selic,<br>I am a Helsinki-based digital artist and designer.
   </div>
   <footer id="copyright"></footer>
   <script>
