About and links updated.

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,6 +29,7 @@
   </header>
   <main>
     <br>
+    <br>
     <h1>About</h1>
     <br>
     <br>
@@ -41,7 +42,7 @@
     <p>
       I graduated with a Bachelor of Arts degree in Interactive Media from Augsburg University of Applied Sciences in
       2021. Currently, I am studying New Media
-      (Master of Arts) at Aalto University in Espoo, Finland.
+      (Master of Arts) with a minor in Game Design and Development at Aalto University in Espoo, Finland.
       <br>
       <br>
       In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
@@ -52,8 +53,8 @@
       <br>
       <br>
       My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
-      InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java
-      (Processing), C++ (Unreal Engine), JavaScript, HTML, and CSS.
+      InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java, C++, HTML,
+      CSS, and JavaScript.
       <br>
       <br>
       I speak German, English, and a bit of Finnish.
@@ -63,20 +64,28 @@
     <br>
     <br>
     <br>
-    <h1>Clients</h1>
+    <br>
+    <br>
+    <h1>Clients & Collaborations</h1>
     <br>
     <br>
     <h2 style="line-height: 2;">
-      <!-- &#9673  --><a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
+      + <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
       <br>
-      <!-- &#9636  --><a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+      + <a href="https://www.behance.net/jc_muyonjo" target="_blank">J.C Muyonjo</a>
       <br>
-      <!-- &#9680  --><a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+      + <a href="https://www.dsh.fi/de/" target="_blank">Helsinki German School</a>
       <br>
-      <!-- &#9707  --><a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
+      + <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
       <br>
-      <!-- &#9709  -->more_about_robots GmbH
+      + <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+      <br>
+      + <a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
+      <br>
+      + more_about_robots GmbH
     </h2>
+    <br>
+    <br>
     <br>
     <br>
     <br>
