--- a/index.html
+++ b/index.html
@@ -187,9 +187,7 @@
       transform: translate(-50%, -50%);
       user-select: none;
       pointer-events: none;
-      filter: brightness(0.6) grayscale(1)
-        /*  invert(1) */
-      ;
+      filter: /* brightness(0.6) */ grayscale(1);
       /* display: none; */
     }
 
@@ -221,18 +219,9 @@
       font-size: 64px;
       text-align: center;
       /* color: #fff; */
-      /* mix-blend-mode: difference; */
-      filter: invert();
+      mix-blend-mode: difference;
+      /* filter: invert(); */
 
-      background: linear-gradient(90deg, #e1e1e1, #c1c1c1, #f5f5f5, #a1a1a1, #e1e1e1);
-      background-clip: text;
-      -webkit-background-clip: text;
-      color: transparent;
-      text-shadow:
-        0px 1px 2px rgba(0, 0, 0, 0.8),
-        0px 2px 4px rgba(0, 0, 0, 0.6),
-        0px 4px 8px rgba(0, 0, 0, 0.4);
-      
       width: 90vw;
       position: absolute;
       top: 50%;
