--- a/pages/about.html
+++ b/pages/about.html
@@ -28,92 +28,107 @@
     </nav>
   </header>
   <main>
-    <br>
-    <br>
-    <h1>About</h1>
-    <br>
-    <br>
-    <h2>
-      Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range
-      of media—from 3D modelling and animation to websites, games, and interactive experiences.
-    </h2>
-    <br>
-    <br>
-    <p>
-      I graduated with a Bachelor of Arts degree in Interactive Media from Augsburg University of Applied Sciences in
-      2021. Currently, I am studying New Media
-      (Master of Arts) with a minor in Game Design and Development at Aalto University in Espoo, Finland.
-      <br>
-      <br>
-      In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
-      Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
-      northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
-      wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
-      themes of nature, technology, and human emotion, often weaving narratives about the past and the future.
-      <br>
-      <br>
-      My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
-      InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java, C++, HTML,
-      CSS, and JavaScript.
-      <br>
-      <br>
-      I speak German, English, and a bit of Finnish.
-    </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1>Clients & Collaborations</h1>
-    <br>
-    <br>
-    <h2 style="line-height: 2;">
-      + <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
-      <br>
-      + <a href="https://www.behance.net/jc_muyonjo" target="_blank">J.C Muyonjo</a>
-      <br>
-      + <a href="https://www.dsh.fi/de/" target="_blank">Helsinki German School</a>
-      <br>
-      + <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
-      <br>
-      + <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
-      <br>
-      + <a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
-      <br>
-      + more_about_robots GmbH
-    </h2>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1>Links</h1>
-    <br>
-    <br>
-    <h2 style="line-height: 2;">
-      &#8674<a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
-      <br>
-      &#8605<a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
-      <br>
-      &#8620<a href="https://github.com/tinoselic" target="_blank">GitHub</a>
-      <br>
-      &#8702<a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
-      <br>
-      &#8699<a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
-      <br>
-      &#8692<a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
-    </h2>
-    <!-- <div class="about-column-right">
-        <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
+    <div class="row" style="padding-top: 36px;">
+      <div class="about-column-left">
+        <h1>About</h1>
         <br>
         <br>
+        <h2>
+          Hi, my name is Tino Selić (he/him). I am a versatile digital artist and designer whose work spans a wide range
+          of media—from 3D modelling and animation to websites, games, and interactive experiences.
+        </h2>
         <br>
         <br>
+        <p>
+          I graduated with a Bachelor of Arts degree in Interactive Media from Augsburg University of Applied Sciences
+          in
+          2021. Currently, I am studying New Media
+          (Master of Arts) with a minor in Game Design and Development at Aalto University in Espoo, Finland.
+          <br>
+          <br>
+          In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
+          Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
+          northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
+          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
+          themes of nature, technology, and human emotion, often weaving narratives about the past and the future.
+          <br>
+          <br>
+          My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
+          InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java, C++,
+          HTML,
+          CSS, and JavaScript.
+          <br>
+          <br>
+          I speak German, English, and a bit of Finnish.
+        </p>
+      </div>
+      <!-- <div class="about-column-right">
+        <img src="../assets/Adungu_Isolated.png" alt="Adungo background sticker" id="adungu">
+        <br>
+        <br>
+        <img src="../assets/Engoma_Isolated.png" alt="Adungo background sticker" id="engoma">
       </div> -->
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+      <div class="about-column-left">
+        <h1>Clients & Collaborations</h1>
+        <br>
+        <br>
+      </div>
+      <div class="about-column-right">
+        <h2 style="line-height: 2;">
+          + <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
+          <br>
+          + <a href="https://www.behance.net/jc_muyonjo" target="_blank">J.C Muyonjo</a>
+          <br>
+          + <a href="https://www.dsh.fi/de/" target="_blank">Helsinki German School</a>
+          <br>
+          + <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+          <br>
+          + <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+          <br>
+          + <a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
+          <br>
+          + more_about_robots GmbH
+        </h2>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+      <div class="about-column-left">
+        <h1>Links</h1>
+        <br>
+        <br>
+      </div>
+      <div class="about-column-right">
+        <h2 style="line-height: 2;">
+          &#8674<a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
+          <br>
+          &#8605<a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
+          <br>
+          &#8620<a href="https://github.com/tinoselic" target="_blank">GitHub</a>
+          <br>
+          &#8702<a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
+          <br>
+          &#8699<a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
+          <br>
+          &#8692<a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
+        </h2>
+        <!-- <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
+        <br>
+        <br>
+        <br>
+        <br> -->
+      </div>
+    </div>
   </main>
   <footer id="copyright"></footer>
   <script src="../app.js"></script>
