About spacing fixed.

--- a/pages/about.html
+++ b/pages/about.html
@@ -74,13 +74,11 @@
     <br>
     <br>
     <br>
-    <div class="row">
+    <div class="row" style="padding-top: 0px;">
       <div class="about-column-left">
         <h1>Clients & Collaborations</h1>
         <br>
         <br>
-      </div>
-      <div class="about-column-right">
         <h2 style="line-height: 2;">
           + <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
           <br>
@@ -97,18 +95,18 @@
           + more_about_robots GmbH
         </h2>
       </div>
+      <div class="about-column-right">
+      </div>
     </div>
     <br>
     <br>
     <br>
     <br>
-    <div class="row">
+    <div class="row" style="padding-top: 0px;">
       <div class="about-column-left">
         <h1>Links</h1>
         <br>
         <br>
-      </div>
-      <div class="about-column-right">
         <h2 style="line-height: 2;">
           &#8674<a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
           <br>
@@ -121,6 +119,8 @@
           &#8699<a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
           <br>
           &#8692<a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
+      </div>
+      <div class="about-column-right">
         </h2>
         <!-- <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
         <br>
