About bullet points changed.

--- a/pages/about.html
+++ b/pages/about.html
@@ -80,19 +80,19 @@
         <br>
         <br>
         <h2 style="line-height: 2;">
-          + <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
+          &#9702 <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
           <br>
-          + <a href="https://www.behance.net/jc_muyonjo" target="_blank">J.C Muyonjo</a>
+          &#9702 <a href="https://www.behance.net/jc_muyonjo" target="_blank">J.C Muyonjo</a>
           <br>
-          + <a href="https://www.dsh.fi/de/" target="_blank">Helsinki German School</a>
+          &#9702 <a href="https://www.dsh.fi/de/" target="_blank">Helsinki German School</a>
           <br>
-          + <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+          &#9702 <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
           <br>
-          + <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+          &#9702 <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
           <br>
-          + <a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
+          &#9702 <a href="https://forum-mentoring.de/" target="_blank">Forum Mentoring e.V.</a>
           <br>
-          + more_about_robots GmbH
+          &#9702 more_about_robots GmbH
         </h2>
       </div>
       <div class="about-column-right">
