--- a/pages/about.html
+++ b/pages/about.html
@@ -61,6 +61,12 @@
           <br>
           I speak German, English, and a bit of Finnish.
         </p>
+        <br>
+        <br>
+        <br>
+        <h2>
+          Contact me: <a href="mailto:tino.selic@gmail.com">tino.selic@gmail.com</a>
+        </h2>
       </div>
       <!-- <div class="about-column-right">
         <img src="../assets/Adungu_Isolated.png" alt="Adungo background sticker" id="adungu">
