Quote text updated.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </video>
     </div>
     <div class="quote">
-      My name is Tino Selic, I am a Helsinki-based digital artist and designer.
+      Tino Selic is a Helsinki-based digital artist and designer.
     </div>
   </main>
   <footer id="copyright" style="
