Clandestine Cult hidden.

--- a/pages/art.html
+++ b/pages/art.html
@@ -107,7 +107,7 @@
           </div>
         </div>
       </a>
-      <a href="2020/2020_clandestine_cult.html">
+      <!-- <a href="2020/2020_clandestine_cult.html">
         <div class="highlight-project">
           <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
           <div class="text-box">
@@ -115,7 +115,7 @@
             <div class="project-title">Clandestine Cult</div>
           </div>
         </div>
-      </a>
+      </a> -->
       <a href="2018/2018_space_jellyfish.html">
         <div class="highlight-project">
           <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
