About links updated.

--- a/pages/about.html
+++ b/pages/about.html
@@ -114,13 +114,13 @@
         <br>
         <br>
         <h2 style="line-height: 2;">
-          &#8674<a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
-          <br>
+          <!-- &#8702<a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
+          <br> -->
           &#8605<a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
           <br>
           &#8620<a href="https://github.com/tinoselic" target="_blank">GitHub</a>
           <br>
-          &#8702<a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
+          &#8674<a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
           <br>
           &#8699<a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
           <br>
